Machetazo to fix transition bugs with overflow in X

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -16,7 +16,8 @@
 @import './layout/generic';
 
 html {
-    font-size: 62.5%
+    font-size: 62.5%;
+    overflow-x: hidden;
 }
 
 body {
